--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,31 @@
 {
-  "name": "gabrielelana/precious",
+  "name": "recruiterphp/precious",
   "description": "Library to build value objects",
-  "type": "library",
   "license": "MIT",
+  "type": "library",
   "authors": [
     {
       "name": "gabriele.lana",
       "email": "gabriele.lana@cleancode.it"
     }
   ],
-  "minimum-stability": "stable",
-  "extra": {
-    "phpstan": {
-      "includes": [
-        "rules.neon"
-      ]
-    }
+  "require": {
+    "php": "^7.1"
   },
+  "require-dev": {
+    "ergebnis/composer-normalize": "^2.47",
+    "nikic/php-parser": "^4.1",
+    "phpstan/phpstan": "^0.11",
+    "phpunit/phpunit": "^8.0"
+  },
+  "replace": {
+    "gabrielelana/precious": "self.version"
+  },
+  "suggest": {
+    "nikic/php-parser": "^4.1",
+    "phpstan/phpstan": "^0.11"
+  },
+  "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
       "Precious\\": [
@@ -32,16 +41,17 @@
       "tests/PHPStan/Reflection/data/"
     ]
   },
-  "require": {
-    "php": "~7.1"
+  "config": {
+    "allow-plugins": {
+      "ergebnis/composer-normalize": true
+    },
+    "sort-packages": true
   },
-  "suggest": {
-    "phpstan/phpstan": "^0.11",
-    "nikic/php-parser": "^4.1"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^8.0",
-    "phpstan/phpstan": "^0.11",
-    "nikic/php-parser": "^4.1"
+  "extra": {
+    "phpstan": {
+      "includes": [
+        "rules.neon"
+      ]
+    }
   }
 }
