--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,7 +3,10 @@ includes:
 
 parameters:
   level: 7
-  excludes_analyse:
+  paths:
+    - src
+    - tests
+  excludePaths:
     - %currentWorkingDirectory%/vendor/
     - %currentWorkingDirectory%/tests/*/data/*
     - %currentWorkingDirectory%/tests/PreciousTest.php
